# keywordit-site

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CNAME  HEARTBEAT.md  MEMORY.md  ROADMAP.md  SOUL.md  WORKFLOW_AUTO.md  admin.html  angle_engine.py  angle_engine_semantic.py  bing_search.py  chat_widget.html  commercial_keyword_transformer.py  config.py  consequence_generator.py  country_config.py  cpc_cache.py  cpc_cache_budget_functions.py  dashboard.html  dashboard_builder.py  dashboard_template.html  deploy_dashboard.sh  discovery_last_run.txt  discovery_rejected.jsonl  error_log.jsonl  experimental_enrichment.py  experimental_tab_v2.py  explosive_trends.json  golden_opportunities.json  heartbeat.py  index.html  index_history.py  intelligence.html  keyword_expander.py  keyword_extractor.py  landing.html  latest_trends.json  (+39 more)
.github/: wave-3-pr-body.md  wave-4-pr-body.md  wave-5-pr-body.md
.openclaw/: workspace-state.json
QA_HARNESS/: README.md
__pycache__/: Models switch.md
config/: angle_engine.yaml  dashboard_flags.json
data/: angle_templates.json  entity_registry.json  hard_filters.json  vertical_cpc_reference.json  winner_dna.json
docs/: heartbeat_triggers.md  operator_switches.md  storage_map.md
lib/: alerts.py  daily_digest.py  dashboard_enrich.py  freshness_monitors.py  schema_version.py
memory/: 2026-03-03.md  2026-03-04.md  ARCHITECTURE.md  REMEDIATION.md  STATUS.md
modules/: cpc_router.py  hard_filter.py  keyword_scorer.py  linguistic_scorer.py  plausibility_checker.py  rsoc_scorer.py  template_decomposer.py  template_expander.py
(+66 files in other folders)
